--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,9 +2,30 @@
   margin: 0;
   padding: 0;
 }
+.PNF__text {
+  font-size: 50px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+}
+.PNF__link {
+  text-decoration: none;
+  color: black;
+}
 #root {
   background-color: #fff;
   color: #fff;
+}
+h5 {
+  color: #FFF;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+}
+h6 {
+  color: #2C2670;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
 }
 .contents {
   display: flex;
@@ -27,4 +48,22 @@
   text-decoration: none;
   color: #FFF;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.forBtn {
+  margin: 44px auto 0;
+  width: 85%;
+  display: flex;
+  justify-content: flex-end;
+}
+.btn__Back {
+  border: none;
+  padding: 13.5px 0px;
+  border-radius: 39px;
+  background: #D9D9D9;
+}
+.Back__link {
+  color: #fff;
+  text-decoration: none;
+  border-radius: 39px;
+  padding: 13.5px 30px;
 }
