--- a/src/css/MUIT.css
+++ b/src/css/MUIT.css
@@ -1,8 +1,7 @@
 .MUIT {
-  margin-top: 32px;
   display: flex;
   gap: 50px;
-  padding: 24px 36px;
+  padding: 36px 36px;
 }
 .MUIT__logo {
   background: url(../img/image2.png) no-repeat center center;
@@ -11,6 +10,8 @@
   height: 73.5px;
 }
 .MUIT__name {
+  display: flex;
+  align-items: center;
   width: 40%;
   color: #2C2670;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
