--- a/src/css/App.css
+++ b/src/css/App.css
@@ -21,11 +21,12 @@ h5 {
   font-size: 20px;
   font-weight: 600;
 }
-h6 {
+.h6 {
   color: #2C2670;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: 500;
+  text-decoration: none;
 }
 .contents {
   display: flex;
