--- a/src/css/KiteLink.css
+++ b/src/css/KiteLink.css
@@ -12,8 +12,8 @@
 .Kite-link__name {
   display: flex;
   align-items: center;
-  width: 44%;
-  color: #282744;
+  width: 58%;
+  color: #2C2670;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 30px;
   font-weight: 700;
