--- a/src/css/App.css
+++ b/src/css/App.css
@@ -21,7 +21,7 @@ h5 {
   font-size: 20px;
   font-weight: 600;
 }
-.h6 {
+.h6, h6 {
   color: #2C2670;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
@@ -50,21 +50,17 @@ h5 {
   color: #FFF;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.forBtn {
-  margin: 44px auto 0;
-  width: 85%;
+.btn__Back {
+  margin: 0 auto;
+  width: 75%;
   display: flex;
   justify-content: flex-end;
-}
-.btn__Back {
-  border: none;
-  padding: 13.5px 0px;
-  border-radius: 39px;
-  background: #D9D9D9;
 }
 .Back__link {
   color: #fff;
   text-decoration: none;
+  border: 1px dimgray solid;
   border-radius: 39px;
   padding: 13.5px 30px;
+  cursor: pointer;
 }
