--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -36,9 +36,75 @@
   line-height: normal;
   text-align: center;
 }
-.burger {
+.hamburger-menu {
   display: block;
   background-image: url(../img/burger.svg);
   width: 34px;
   height: 18px;
+}
+#menu__toggle {
+  opacity: 0;
+  width: 34px;
+  height: 18px;
+  cursor: pointer;
+}
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 30px;
+  right: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  width: 400px;
+  height: 100%;
+  margin: 0;
+  padding: 30px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #2C2670;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #2C2670;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
 }
