--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -3,14 +3,31 @@
   gap: 50px;
   padding: 36px 36px;
 }
+.title__contain {
+  display: flex;
+  justify-content: center;
+}
+.title__contain-M {
+  margin: 0 0 10px 0;
+}
 .Edu__text-L {
+  color: #2C2670;
   display: flex;
   align-items: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 30px;
+  font-size: 48px;
   font-weight: 700;
 }
 .Edu__text-M {
+  color: #2C2670;
+  display: flex;
+  align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+}
+.Edu__text-S {
+  color: #2C2670;
   display: flex;
   align-items: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -78,11 +95,103 @@
   grid-template-rows: 45px 45px 45px 45px 45px;
   grid-template-columns: 10% 70% 20%;
 }
-.MUIT__links ul{
+.table__links ul{
   list-style: none;
   color: #2C2670;
 }
-.MUIT__links li {
+.table__links li {
   border-bottom: 1px #2C2670 solid;
   padding: 15px 0;
+  display: table;
+}
+.search__label {
+  display: flex;
+  align-items: center;
+}
+.search__input {
+  width: 35%;
+  height: 50px;
+  border-radius: 40px 0 0 40px;
+  padding: 5px 10px 5px 10px;
+  box-sizing: border-box;
+}
+.search__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2C2670;
+  cursor: pointer;
+  width: 5%;
+  height: 50px;
+  border-radius: 0px 40px 40px 0px;
+}
+.search__btn-in {
+  background-image: url(../img/magnifier.svg);
+  width: 28px;
+  height: 28px;
+}
+.auth__contain {
+  margin: 0 auto;
+  margin-top: 25px;
+  width: 530px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.auth__input {
+  padding: 5px 10px 5px 10px;
+  width: 500px;
+  height: 50px;
+  border: none;
+  box-shadow: 2px 2px 30px -7.5px rgba(0,0,0,0.25);
+  font-size: 16px;
+  color: #2C2670;
+  margin-top: 15px;
+}
+.input__text {
+  color: #2C2670;
+  font-size: 22px;
+  margin-top: 12.5px;
+}
+.Montherat {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.checkbox {
+  width: 20px;
+  height: 20px;
+  margin: 10px 10px 10px 0;
+}
+.remember {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 10px 0 10px 0;
+}
+.checkbox__text {
+  color: #2C2670;
+  font-size: 18px;
+}
+.forgot__text {
+  color: #2C2670;
+  font-size: 16px;
+  text-decoration: none;
+  margin-top: 10px;
+}
+.auth__btn {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.bnt__log {
+  padding: 14px 45px;
+  background-color: #16A767;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+.bnt__reg {
+  padding: 14px 45px;
+  background-color: #2C2670;
+  border: none;
+  cursor: pointer;
+  color: white;
 }
