--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,7 @@
 }
 .PNF__text {
   font-size: 50px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
 }
 .PNF__link {
@@ -17,13 +17,13 @@
 }
 h5 {
   color: #FFF;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: 600;
 }
 .h6, h6 {
   color: #2C2670;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: 500;
   text-decoration: none;
@@ -44,6 +44,7 @@ h5 {
 .btn {
   border: none;
   padding: 12px 0px;
+  margin-top: 48px;
   background: #16A767;
   font-size: 20px;
   font-weight: 700;
@@ -53,11 +54,11 @@ h5 {
   padding: 12px 18.5px;
   text-decoration: none;
   color: #FFF;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif; 
 }
 .btn__Back {
   margin: 0 auto;
-  width: 75%;
+  width: 90%;
   display: flex;
   justify-content: flex-end;
 }
