--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,6 +1,5 @@
 .nav {
   width: 100vw;
-  margin-bottom: 48px;
   background: #2C2670;
 }
 .nav__in {
@@ -12,7 +11,7 @@
 .nav__title {
   color: #fff;
   text-decoration: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 36px;
   margin: 7.5px;
   font-style: normal;
@@ -26,7 +25,7 @@
   width: 550px;
   gap: 40px;
   list-style: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .nav__list a{
   color: #fff;
@@ -37,27 +36,35 @@
   text-align: center;
 }
 .hamburger-menu {
-  display: block;
-  background-image: url(../img/burger.svg);
-  width: 34px;
-  height: 18px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-self: center;
 }
 #menu__toggle {
   opacity: 0;
-  width: 34px;
-  height: 18px;
-  cursor: pointer;
+  width: 30px;
+  height: 30px;
 }
 .menu__btn {
   display: flex;
   align-items: center;
-  position: fixed;
+  position: absolute;
   top: 30px;
-  right: 20px;
-  width: 26px;
-  height: 26px;
+  right: 70px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: white;
 }
 .menu__btn > span::before {
   content: '';
@@ -69,13 +76,14 @@
 }
 .menu__box {
   display: block;
-  position: fixed;
+  position: absolute;
   visibility: hidden;
   top: 0;
+  left: -100%;
   width: 400px;
   height: 100%;
-  margin: 0;
-  padding: 30px 0;
+  margin: 0 0 0 73vw;
+  padding: 80px 0;
   list-style: none;
   text-align: center;
   background-color: #2C2670;
@@ -85,13 +93,15 @@
   display: block;
   padding: 12px 24px;
   color: #333;
-  font-family: 'Roboto', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
 }
 .menu__item:hover {
-  background-color: #2C2670;
+  border-bottom: 2px #fff solid;
+  display: table;
+  margin: 0 auto;
 }
 #menu__toggle:checked ~ .menu__btn > span {
   transform: rotate(45deg);
