--- a/src/css/Wellcome.css
+++ b/src/css/Wellcome.css
@@ -24,7 +24,7 @@ html, body {
   margin: 0;
   color: #FFF;
   text-align: right;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 52.5px;
   font-style: normal;
   font-weight: 700;
