--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
 }
+.сontents {
+  height: 100%;
+  overflow: auto;
+}
 .PNF__text {
   font-size: 50px;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -14,6 +18,7 @@
 #root {
   background-color: #fff;
   color: #fff;
+  overflow: hidden;
 }
 h5 {
   color: #FFF;
@@ -27,10 +32,6 @@ h5 {
   font-size: 20px;
   font-weight: 500;
   text-decoration: none;
-}
-.contents {
-  display: flex;
-  flex-direction: column;
 }
 .main {
   margin: 0 auto;
