--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -38,20 +38,19 @@ table.table thead {
   width: 100%;
 }
 table.table th{
-  color: #FFF;
+  color: white;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-weight: 600;
   background-color: #2C2670;
 }
-/* table.table th:nth-child(1){width: 5%;}
+table.table th:nth-child(1){width: 5%;}
 table.table th:nth-child(2){width: 30%;}
 table.table th:nth-child(3){width: 13%;}
 table.table th:nth-child(4){width: 13%;}
 table.table th:nth-child(5){width: 13%;}
 table.table th:nth-child(6){width: 13%;}
-table.table th:nth-child(7){width: 13%;} */
-
+table.table th:nth-child(7){width: 13%;}
 table.table td{
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
@@ -64,10 +63,10 @@ table.table td,table.table th{
   vertical-align: middle;
   border: 1px solid #2C2670;
 }
+.for_redact {
+  margin: 0 12% 0 30%;
+}
 .redact {
-  position: absolute;
-  right: 76px;
-  top: 190px;
   background-color: #16A767;
   padding: 14px 40px;
   border: none;
