--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -116,7 +116,7 @@
   align-items: center;
 }
 .search__input {
-  width: 35%;
+  width: 500px;
   height: 50px;
   border-radius: 40px 0 0 40px;
   padding: 5px 10px 5px 10px;
@@ -147,7 +147,7 @@
   align-items: center;
   background-color: #2C2670;
   cursor: pointer;
-  width: 5%;
+  width: 60px;
   height: 50px;
   border-radius: 0px 40px 40px 0px;
 }
