--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -190,7 +190,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  margin: 10px 0 10px 0;
+  margin: 10px 0 0 0;
 }
 .checkbox__text {
   color: #2C2670;
@@ -203,6 +203,7 @@
   margin-top: 10px;
 }
 .auth__btn {
+  margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: space-between;
