--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,16 @@
   margin: 0;
   padding: 0;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+input[type='number'],
+input[type="number"]:hover,
+input[type="number"]:focus {
+    appearance: none;
+    -moz-appearance: textfield;
+}
 #root {
   background-color: #fff;
   color: #fff;
