--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -173,6 +173,17 @@
   color: #2C2670;
   margin-top: 15px;
 }
+.trued {
+  padding: 14px 20px;
+  display: flex;
+  background-color: #16A767;
+  color: white;
+  align-items: center;
+  justify-content: center;
+}
+.white {
+  color: white;
+}
 .input__text {
   color: #2C2670;
   font-size: 22px;
@@ -204,7 +215,7 @@
 }
 .auth__btn {
   margin-top: 15px;
-  width: 100%;
+  width: 98%;
   display: flex;
   justify-content: space-between;
 }
