--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -162,6 +162,12 @@
   display: flex;
   flex-wrap: wrap;
 }
+.auth__contain-doble {
+  margin: 0 auto;
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+}
 .auth__input {
   padding: 5px 10px 5px 10px;
   width: 500px;
@@ -171,6 +177,15 @@
   font-size: 16px;
   color: #2C2670;
   margin-top: 15px;
+}
+.auth_auth {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.auth__select {
+  width: 520px;
+  height: 60px;
 }
 .trued {
   padding: 14px 20px;
