--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -173,10 +173,11 @@
   margin-top: 15px;
 }
 .auth_auth {
+  width: 1100px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  column-gap: 60px;
 }
 .auth__select {
   width: 520px;
