--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -173,9 +173,11 @@
   margin-top: 15px;
 }
 .auth_auth {
-  width: 900px;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 60px;
 }
 .auth_auth-c {
   margin: 0 auto;
