--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -114,7 +114,7 @@
 }
 
 .header__menu {
-  margin: 0 0 0 19.1%;
+  margin: 0 0 0 28.6%;
   height: 120px;
   display: flex;
   flex-direction: row;
@@ -127,8 +127,9 @@
   background-image: url(../img/Rectangle.png);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 165px;
-  height: 70px;
+  width: 141.43px;
+  height: 60px;
   text-decoration: none;
   color: white;
+  font-size: small;
 }
