--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -104,7 +104,7 @@
   padding: 10px 42px;
   border: none;
   cursor: pointer;
-  margin: 15px 15px 0 0;
+  margin: 15px 15px 0 10px;
 }
 .btn__blue {
   background-color: #2C2670;
