--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -16,3 +16,21 @@
   display: flex;
   align-items: center;
 }
+.options {
+  border: black 2px solid;
+  display: flex;
+  flex-direction: column;
+}
+.custom-select-container::-ms-expand { display: none; } 
+.custom-select-container:hover { border-color: #888; } 
+.custom-select-container:focus { border-color: #aaa; 
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring; 
+  color: #222;
+  outline: none; 
+} 
+.custom-select-container option { font-weight:normal; } 
+*[dir="rtl"] .custom-select-container, :root:lang(ar) .custom-select-container, :root:lang(iw) .custom-select-container { 
+  background-position: left .7em top 50%, 0 0; 
+  padding: .6em .8em .5em 1.4em; 
+}
