--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -1,36 +1,41 @@
 .custom-select-container {
   color: #2C2670;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  width: 436px;
-  height: 40px;
-  border: none;
+  margin-bottom: 10px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
-  outline: none;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  height: 40px;
+}
+.selected-option {
+  width: 436px;
+  height: 40px;
+  display: flex;
+  cursor: pointer;
 }
 .options {
-  border: black 2px solid;
+  border: grey 1px solid;
+  background-color: white;
+  border-radius: 0 0 10px 10px;
+  padding: 7.5px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  width: 436px;
+  box-sizing: border-box;
 }
-.custom-select-container::-ms-expand { display: none; } 
-.custom-select-container:hover { border-color: #888; } 
-.custom-select-container:focus { border-color: #aaa; 
-  box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
-  box-shadow: 0 0 0 3px -moz-mac-focusring; 
-  color: #222;
-  outline: none; 
-} 
-.custom-select-container option { font-weight:normal; } 
-*[dir="rtl"] .custom-select-container, :root:lang(ar) .custom-select-container, :root:lang(iw) .custom-select-container { 
-  background-position: left .7em top 50%, 0 0; 
-  padding: .6em .8em .5em 1.4em; 
+.option {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.option__link {
+  width: min-content;
+}
+.add__link {
+  padding: 2.5px;
+  height: 30px;
+  background-color: white;
+  border: gray 1px solid;
 }
