--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -181,7 +181,7 @@
 }
 .auth-auth-c {
   width: 1000px;
-  margin: 0 auto;
+  margin: 0 10px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 60px;
