--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -28,6 +28,7 @@
 .option {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin-bottom: 15px;
 }
 .option__link {
