--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -32,6 +32,9 @@
   font-size: 32px;
   font-weight: 700;
 }
+.Edu__text-M-office {
+  margin: 0 0 10px 10px;
+}
 .Edu__text-S {
   color: #2C2670;
   display: flex;
@@ -39,6 +42,9 @@
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 18px;
   font-weight: 700;
+}
+.Edu__text-S-office {
+  margin: 5px 0 10px 5px;
 }
 .Edu__table {
   width: 70%;
@@ -55,6 +61,9 @@
 }
 .row:nth-child(1),.row:nth-child(2),.row:nth-child(3) {
   background: #2C2670;
+}
+.bold {
+  font-weight: 800;
 }
 .Kite__logo {
   background: url(../img/image3.png) no-repeat center center;
@@ -178,6 +187,7 @@
   justify-content: space-between;
   width: 900px;
   gap: 5px;
+  margin-left: 15px;
 }
 .auth-auth-c {
   width: 1000px;
