--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -61,15 +61,14 @@
 }
 .office h3 {
   display: block;
-  text-align: center;
-  margin-bottom: 8px;
+  margin: 0 0 8px 15px;
 }
 .office__in {
   display: flex;
   flex-direction: row;
 }
 .form {
-  margin-left: 6%;
+  margin-left: 15px;
 }
 .input__office {
   width: 436px;
@@ -77,16 +76,15 @@
   border: none;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
   outline: none;
+  margin: 5px 0 5px 0;
 }
 .input__text-s {
   color: #2C2670;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 1200;
   line-height: normal;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 .btn__office {
   display: flex;
@@ -104,13 +102,14 @@
   padding: 10px 42px;
   border: none;
   cursor: pointer;
-  margin: 15px 15px 0 10px;
+  margin: 15px 15px 0 0;
 }
 .btn__blue {
   background-color: #2C2670;
 }
 .btn__green {
   background-color: #16A767;
+  margin-left: 15px;
 }
 .header__menu {
   margin: 0 0 0 20.5%;
