--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -111,6 +111,9 @@
   background-color: #16A767;
   margin-left: 15px;
 }
+.btn__green-a {
+  background-color: #16A767;
+}
 .header__menu {
   margin: 0 0 0 20.5%;
   height: 120px;
