--- a/src/css/Educational.css
+++ b/src/css/Educational.css
@@ -189,6 +189,9 @@
   gap: 5px;
   margin-left: 15px;
 }
+.auth__contain-doble {
+  margin-top: 17px;
+}
 .auth-auth-c {
   width: 1000px;
   margin: 0 10px;
