--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -120,12 +120,11 @@
   background-color: #16A767;
 }
 .header__menu {
-  margin: 0 0 30px 0;
+  margin: 0 0 30px 17px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 870px;
 }
 .head__item {
   text-align: center;
