--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -139,7 +139,7 @@
   color: white;
   font-size: small;
 }
-.head__item:first-child {
+.head__item_1 {
   text-align: center;
   justify-content: center;
   background-size: contain;
