--- a/src/css/userInfo.css
+++ b/src/css/userInfo.css
@@ -11,6 +11,7 @@
 .userInfo, .userInfo-in  {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 .userInfo__name {
   color: #2C2670;
@@ -42,8 +43,11 @@
   align-items: center;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 350;
   margin: 10px 0 10px 0;
+}
+.userInfo-in-text{
+  margin-left: 20px;
 }
 .bline {
   border-bottom: #2C2670 2px solid;
