--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -46,16 +46,11 @@
   display: flex;
   align-items: center;
 }
-.trash_can {
-  border: none;
-  width: 20px;
-  height: 25px;
-  background-color: rgba(0,0,0,0);
-  background-image: url(../img/trash_can.svg);
-  background-size: 20px 25px;
-  cursor: pointer;
-  margin: 0 10px;
-}
 .crossed-out {
   text-decoration: line-through;
+}
+.jc-sb {
+  display: flex;
+  justify-content: space-between;
+  width: 350px;
 }
