--- a/src/css/userInfo.css
+++ b/src/css/userInfo.css
@@ -13,6 +13,9 @@
   justify-content: space-between;
   margin-bottom: 30px;
 }
+.userInfo__right {
+  width: 50%;
+}
 .userInfo__name {
   color: #2C2670;
   display: flex;
