--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -21,7 +21,7 @@
   height: 184px;
 }
 .home__card:nth-child(2) {
-  color: #2C2670;
+  color: #163A62;
   width: 300px;
 }
 .home__card:nth-child(2) .card__img {
