--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -1,5 +1,5 @@
 .custom-select-container {
-  color: #2C2670;
+  color: #F5F3F4;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   margin-bottom: 10px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
