--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -87,7 +87,7 @@
   padding: 10px;
 }
 .input__text-s {
-  color: #F5F3F4;
+  color: #666390;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-style: normal;
