--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -15,7 +15,7 @@
   position: relative;
   width: 100%;
   margin: 0 auto;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: black;
   padding: 4px;
   font-size: 22px;
