--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -11,7 +11,7 @@
 .nav__title {
   color: #fff;
   text-decoration: none;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 36px;
   margin: 7.5px;
   font-style: normal;
@@ -25,7 +25,7 @@
   width: 550px;
   gap: 40px;
   list-style: none;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .nav__list a{
   color: #fff;
@@ -64,7 +64,7 @@
   display: block;
   padding: 12px 24px;
   color: #fff;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
