--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -31,7 +31,7 @@
 }
 .user__name {
   color: #FFF;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 26px;
   font-weight: 500;
   padding: 12.5px 0 10px 0;
@@ -47,7 +47,7 @@
 }
 .config__items {
   color: #FFF;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
@@ -88,7 +88,7 @@
 }
 .input__text-s {
   color: #666390;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-style: normal;
   line-height: normal;
