--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -1,9 +1,8 @@
 .custom-select-container {
   color: #2C2670;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   margin-bottom: 10px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: column;
   height: 40px;
