--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -29,7 +29,7 @@ table.table{
   margin-bottom: 25px;
 }
 .subtable{
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
@@ -46,7 +46,7 @@ table.table thead {
 }
 table.table th{
   color: white;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-weight: 600;
   background-color: #163A62;
@@ -59,7 +59,7 @@ table.table th:nth-child(5){width: 13%;}
 table.table th:nth-child(6){width: 13%;}
 table.table th:nth-child(7){width: 13%;}
 table.table td{
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
   font-size: 15px;
   color: black;
@@ -80,7 +80,7 @@ table.table td,table.table th{
   border: none;
   cursor: pointer;
   color: #FFF;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-weight: 700;
   position: absolute;
