--- a/src/css/userInfo.css
+++ b/src/css/userInfo.css
@@ -13,6 +13,9 @@
   justify-content: space-between;
   margin-bottom: 30px;
 }
+.userInfo-in {
+  padding: 5px;
+}
 .userInfo__right {
   width: 80%;
 }
@@ -20,7 +23,7 @@
   color: #163A62;
   display: flex;
   align-items: center;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 36px;
   font-weight: 700;
 }
@@ -28,7 +31,7 @@
   color: #163A62;
   display: flex;
   align-items: center;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 27px;
   font-weight: 700;
 }
@@ -36,7 +39,7 @@
   color: black;
   display: flex;
   align-items: center;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 27px;
   font-weight: 700;
 }
@@ -44,10 +47,10 @@
   color: black;
   display: flex;
   align-items: center;
-  font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 24px;
   font-weight: 350;
-  margin: 10px 0 10px 0;
+  margin: 2px;
 }
 .userInfo-in-text{
   margin-left: 20px;
