--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -52,7 +52,13 @@
 .jc-sb {
   display: flex;
   justify-content: space-between;
-  width: 350px;
+  width: 50%;
+}
+a.bnt__log.Link {
+  text-decoration: none;
+  font-size: medium;
+  font-weight: 300;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .check {
   width: 20px;
