--- a/src/css/App.css
+++ b/src/css/App.css
@@ -42,7 +42,7 @@ h5 {
   font-weight: 600;
 }
 h6, .h6 {
-  color: #163A62;
+  color: #2D4478;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: 500;
@@ -50,7 +50,7 @@ h6, .h6 {
 }
 .Link {
   text-decoration: none;
-  color: #163A62;
+  color: #2D4478;
   font-weight: 500;
 }
 .btn {
