--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -1,5 +1,5 @@
 .custom-select-container {
-  color: #2C2670;
+  color: #2D4478;
   margin-bottom: 10px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
