--- a/src/css/Select.css
+++ b/src/css/Select.css
@@ -5,13 +5,16 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: column;
-  height: 40px;
+  height: 55px;
+  border: #2D4478 1px solid;
+  border-radius: 5px;
 }
 .selected-option {
   width: 436px;
   height: 40px;
   display: flex;
   cursor: pointer;
+  margin: 5px;
 }
 .options {
   border: grey 1px solid;
@@ -21,14 +24,16 @@
   display: flex;
   flex-direction: column;
   z-index: 1;
-  width: 436px;
+  width: 446px;
   box-sizing: border-box;
 }
 .option {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 15px;
+  margin-top: 3px;
+  min-height: 48px;
+  border-bottom: #141d3963 0.1px solid;
 }
 .option__link {
   width: min-content;
