--- a/src/css/PrivateOffice.css
+++ b/src/css/PrivateOffice.css
@@ -75,20 +75,20 @@
 }
 .input__office {
   width: 436px;
-  height: 40px;
+  height: 46px;
   border: none;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
   outline: none;
   margin: 5px 0 5px 0;
-  border: 1px solid blue;
-  border-radius: 10px;
+  border: 1px solid #2D4478;
+  border-radius: 7.5px;
   padding-left: 3px;
 }
 .input__office>.input__text-s{
   padding: 10px;
 }
 .input__text-s {
-  color: #666390;
+  color: #2D4478;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   font-style: normal;
