--- a/src/css/App.css
+++ b/src/css/App.css
@@ -80,5 +80,6 @@ h6, .h6 {
   border: 1px dimgray solid;
   border-radius: 39px;
   padding: 13.5px 30px;
+  margin-bottom: 15px;
   cursor: pointer;
 }
