--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -65,3 +65,16 @@ a.bnt__log.Link {
   height: 20px;
   margin-left: 10px;
 }
+.admin__link {
+  color: white;
+  font-size: larger;
+  width: 400px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: #002077;
+  margin: 0 auto;
+  text-decoration: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
