--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -65,16 +65,24 @@ a.bnt__log.Link {
   height: 20px;
   margin-left: 10px;
 }
+.admin__links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 25px auto;
+  width: 70%;
+}
 .admin__link {
   color: white;
   font-size: larger;
-  width: 400px;
-  height: 50px;
+  width: 500px;
+  height: 60px;
   display: flex;
   justify-content: center;
-  border-radius: 10px;
-  background-color: #002077;
-  margin: 0 auto;
+  border-radius: 15px;
+  background-color: #2D4478;
   text-decoration: none;
+  margin: 15px;
+  padding: 7.5px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
